@@ -203,6 +203,11 @@
 				$db->queueDrop()->rollback();
 				throw $e;
 			}
+			
+			if ($this->dao instanceof SmartDAO)
+				$this->dao->dropLists();
+			elseif ($this->dao instanceof CommonDAO)
+				$this->dao->uncacheList();
 
 			return $this;
 		}
